[project]
name = "longcat-key-generator"
version = "0.1.0"
description = "LongCat API key generator (MyKeeta Passport OTP) + optional GPT-Load sync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "drissionpage>=4.1.1.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "setuptools>=80.9.0",
    "tomli>=2.3.0",
]
